# enterprise-policy-attestation-referance-demo

./: .gitignore  DEMO_SCRIPT.md  README.md  docker-compose.yml  policy.yaml
.github/workflows/: build-provenance.yml  ci.yml  functional-tests.yml
backend/backend-api/: .coverage  Dockerfile  coverage.xml  pyproject.toml  pytest.ini
backend/backend-api/app/: database.py  main.py  models.py
backend/backend-api/tests/: test_api.py  test_database.py  test_main.py  test_models.py
e2e-tests/: README.md  package-lock.json  package.json  playwright.config.ts
e2e-tests/tests/: api-integration.spec.ts  basic.spec.ts  product-detail.spec.ts  product-listing.spec.ts
e2e-tests/tests/screenshots/: .gitkeep
frontend/frontend-app/: .eslintrc.js  .eslintrc.json  Dockerfile  jest.config.js  nginx.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.test.json  vite.config.ts
frontend/frontend-app/coverage/: clover.xml  coverage-final.json  lcov.info
frontend/frontend-app/coverage/lcov-report/: index.html
frontend/frontend-app/src/: App.test.tsx  App.tsx
frontend/frontend-app/src/__mocks__/: products.ts
frontend/frontend-app/src/api/: products.mock.ts  (+2 more)
k8s/admission-controller/: Dockerfile  README.md  deployment.yaml  generate-certs.sh  go.mod  go.sum  service.yaml  telemetry.go  telemetry_test.go  validator.go  webhook.yaml
k8s/admission-controller/test-deployments/: dev-deployment.yaml  prod-deployment.yaml  qa-deployment.yaml
k8s/monitoring/: README.md  TESTING.md  example-traces.json  otel-collector.yaml  test-integration.sh
(+75 files in other folders)
